--- a/services_layout_2.html
+++ b/services_layout_2.html
@@ -269,8 +269,8 @@
         <div class="col-md-4 col-sm-12" id="contact_bg">
           <h3>Contactos</h3>
           <ul id="contact_details_footer">
-            <li id="address_footer">Republica del salvador - 101<br>Ambato - Ecuador</li>
-            <li id="phone_footer"><a href="tel://004542344599">+45 423 445 99</a> / <a href="tel://004542344599">+593 983272604</a></li>
+            <li id="address_footer">Remigio Crespo y Psje. Romeo Castillo <br>Ambato - Ecuador</li>
+            <li id="phone_footer"><a href="tel://+59332586728">32586728</a> / <a href="tel://+59332586728"> 32586728</a></li>
             <li id="email_footer"><a href="#0">info@alfapaz.com</a></li>
           </ul>
         </div>
@@ -279,8 +279,6 @@
         <ul>
           <li><a href="#0"><i class="icon-facebook"></i></a></li>
           <li><a href="#0"><i class="icon-twitter"></i></a></li>
-          <li><a href="#0"><i class="icon-google"></i></a></li>
-          <li><a href="#0"><i class="icon-vimeo"></i></a></li>
         </ul>
       </div>
     </div><!-- End container -->
