--- a/quotation.html
+++ b/quotation.html
@@ -302,9 +302,9 @@
                     	<h4>Necesitas ayuda?</h4>
                         <h5><i class="icon_globe"></i> Llámanos</h5>
                             <ul>
-                                <li><strong>Ventas</strong><br><a href="tel://003823932342">0038 23932342</a> - <a href="tel://003823932342">0038 23932342</a><br><small>Lunes a viernes 8am - 5pm</small></li>
-                                <li><strong>Asistencia 24h</strong><br><a href="tel://003823932342">0038 23932342</a></li>
-                                <li><strong>Información General</strong><br><a href="tel://003823932342">0038 23932342</a><br><small>Lunes a viernes 8am - 5pm</small></li>
+                                <li><strong>Ventas</strong><br><a href="tel://+59332586728"> 32586728</a> - <a href="tel://+59332586728"> 32586728</a><br><small>Lunes a viernes 8am - 5pm</small></li>
+                                <li><strong>Asistencia 24h</strong><br><a href="tel://+59332586728"> 32586728</a></li>
+                                <li><strong>Información General</strong><br><a href="tel://+59332586728"> 32586728</a><br><small>Lunes a viernes 8am - 5pm</small></li>
                             </ul>
                              <h5><i class="icon_mail_alt"></i> Escríbenos</h5>
                             <ul>
@@ -339,8 +339,8 @@
         <div class="col-md-4 col-sm-12" id="contact_bg">
           <h3>Contactos</h3>
           <ul id="contact_details_footer">
-            <li id="address_footer">Republica del salvador - 101<br>Ambato - Ecuador</li>
-            <li id="phone_footer"><a href="tel://004542344599">+45 423 445 99</a> / <a href="tel://004542344599">+593 983272604</a></li>
+            <li id="address_footer">Remigio Crespo y Psje. Romeo Castillo <br>Ambato - Ecuador</li>
+            <li id="phone_footer"><a href="tel://+59332586728">32586728</a> / <a href="tel://+59332586728"> 32586728</a></li>
             <li id="email_footer"><a href="#0">info@alfapaz.com</a></li>
           </ul>
         </div>
@@ -349,8 +349,6 @@
         <ul>
           <li><a href="#0"><i class="icon-facebook"></i></a></li>
           <li><a href="#0"><i class="icon-twitter"></i></a></li>
-          <li><a href="#0"><i class="icon-google"></i></a></li>
-          <li><a href="#0"><i class="icon-vimeo"></i></a></li>
         </ul>
       </div>
     </div><!-- End container -->
