--- a/about.html
+++ b/about.html
@@ -105,6 +105,8 @@
                               <li class="submenu">
   							</li>
   							<li><a href="contacts.html">Contáctanos</a></li>
+							</li>
+							<li><a href="wwu.html">Trabaja con nosotros</a></li>
 						</ul>
 					</div><!-- End main-menu -->
 				</nav>
@@ -116,7 +118,7 @@
 		<div id="sub_content_in">
 			<div class="container">
 				<h1>Nuestra empresa</h1>
-				<p>"Usu habeo equidem sanctus no ex melius"</p>
+				<p></p>
 			</div>
 		</div>
 	</section><!-- End section -->
@@ -129,7 +131,7 @@
                         <p><img src="img/about_1.jpg" alt="" class="img-responsive"></p>
                         <h2>"Mucho más que seguridad privada"</h2>
                         <p class="lead">
-                            Id pri consul aeterno petentium. Vivendo abhorreant et vim, et quot persecuti mel. Libris hendrerit ex sea. Duo legere evertitur an, pri hinc doctus definitiones an, vix id dicam putent. Ius ornatus instructior in.
+													Brindamos servicios integrales de Seguridad, mediante el asesoramiento, seguridad física, seguridad electrónica, monitoreo, apoyados en tecnología y personal altamente entrenado, evaluado y motivado, para brindar un servicio de excelencia.
                         </p>
                     </div>
                 </div>
@@ -141,21 +143,18 @@
 				<div class="col-sm-4">
 					<h3>Información empresarial</h3>
 					<p>
-						Id pri consul aeterno petentium. Vivendo abhorreant et vim, et quot persecuti mel. Libris hendrerit ex sea. Duo legere evertitur an, pri hinc <strong>doctus definitiones</strong> an, vix id dicam putent. Ius ornatus.
-					</p>
-					<p>
-						Id pri consul aeterno petentium. Vivendo abhorreant et vim, et quot persecuti mel. Libris hendrerit ex sea. Duo legere evertitur an, pri hinc <strong>doctus definitiones</strong> an, vix id dicam putent. Ius ornatus.
+						Somos una Empresa de Seguridad Privada, con cobertura en todo el territorio nacional, en donde la experiencia de sus principales Directivos tanto en seguridad como servicio al cliente ha sido transmitida a sus colaboradores, por medio de capacitación, evaluación y motivación, para otorgar satisfacción completa a sus clientes con un <strong>servicio de excelencia</strong> en la prevención y protección integral de bienes y personas, mediante la utilización de herramientas tecnológicas y humanas.
 					</p>
 					<h4>Misión</h4>
 					<p>
-						Id pri consul aeterno petentium. Vivendo abhorreant et vim, et quot persecuti mel. Libris hendrerit ex sea. Duo legere evertitur an, pri hinc <strong>doctus definitiones</strong> an, vix id dicam putent. Ius ornatus.
-					</p>
-					<p>
-						Id pri consul aeterno petentium. Vivendo abhorreant et vim, et quot persecuti mel. Libris hendrerit ex sea. Duo legere evertitur an, pri hinc <strong>doctus definitiones</strong> an, vix id dicam putent. Ius ornatus.
+						Ser pioneros en innovación en el sector de seguridad privada, consolidando valores y principios éticos en nuestro ramo de negocio, siendo referentes en el cumplimiento de la normativa legal tanto con el  Estado como con nuestros colaboradores, con el  fin de que nuestros clientes se sientan totalmente <strong>respaldados y protegidos</strong> por nuestros servicios.
 					</p>
 					<h4>Visión</h4>
 					<p>
-						Id pri consul aeterno petentium. Vivendo abhorreant et vim, et quot persecuti mel. Libris hendrerit ex sea. Duo legere evertitur an, pri hinc <strong>doctus definitiones</strong> an, vix id dicam putent. Ius ornatus.
+						Consolidar nuestra cobertura nacional, integrando servicios de seguridad tanto físicos, monitoreo, y tecnología de la información, abarcando un servicio integral, que nos permita ser unos de los actores principales en el corto tiempo.
+					</p>
+					<p>
+						ALFAPAZ CIA. LTDA. Cumpliendo con su objeto social, brinda los servicios complementarios en seguridad integral de acuerdo con los requerimientos y exigencia de nuestros clientes, poniendo a su disposición un contingente de personal operativo y administrativo <strong>debidamente capacitado, equipado, motivado y constantemente evaluado</strong>.
 					</p>
 				</div>
 				<div class="col-sm-7 col-sm-offset-1">
