--- a/service_layout_1.html
+++ b/service_layout_1.html
@@ -104,6 +104,8 @@
                               <li class="submenu">
   							</li>
   							<li><a href="contacts.html">Contáctanos</a></li>
+              </li>
+              <li><a href="wwu.html">Trabaja con nosotros</a></li>
 						</ul>
 					</div><!-- End main-menu -->
 				</nav>
