--- a/contacts.html
+++ b/contacts.html
@@ -176,7 +176,7 @@
                             <label>Eres humano? cuánto es 3 + 1? =</label>
                             <input type="text" id="verify_contact" class=" form-control">
                             </div>
-                            <input type="submit" value="Submit" class="btn_1 green medium add_bottom_30" id="submit-contact"/>
+                            <input type="submit" value="Enviar" class="btn_1 green medium add_bottom_30" id="submit-contact"/>
                         </div>
                     </div>
                 </form>
