--- a/wwu.html
+++ b/wwu.html
@@ -116,8 +116,8 @@
 	<section class="parallax_window_in short" data-parallax="scroll" data-image-src="img/subheader_in_3.jpg" data-natural-width="1400" data-natural-height="350">
 		<div id="sub_content_in">
 			<div class="container">
-				<h1>Contáctanos</h1>
-				<p>"Tu seguridad es nuestra prioridad"</p>
+				<h1>Trabaja con nosotros</h1>
+				<p>"Es hora de que puedas unirte a nuestra empresa"</p>
 			</div>
 		</div>
 	</section><!-- End section -->
@@ -127,49 +127,95 @@
         	<div class="row">
 
             <div class="col-md-9">
+              <form method="post" action="//submit.form" onSubmit="return validateForm();">
+              <div style="width: 400px;">
+              </div>
+              <div style="padding-bottom: 18px;font-size : 24px;">Siempre buscamos nuevos talentos.</div>
+              <div style="padding-bottom: 18px;font-size : 18px;">Recuerda llenar cada uno de los campos con información correcta y que nos permita comunicarnos contigo.</div>
+              <div style="display: flex; padding-bottom: 18px;width : 450px;">
+              <div style=" margin-left : 0; margin-right : 1%; width : 49%;">Nombres<span style="color: red;"> *</span><br/>
+                <input type="text" id="data_3" name="data_3" style="width: 100%;" class="form-control"/>
+              </div>
+              <div style=" margin-left : 1%; margin-right : 0; width : 49%;">Apellidos<span style="color: red;"> *</span><br/>
+                <input type="text" id="data_4" name="data_4" style="width: 100%;" class="form-control"/>
+              </div>
+              </div><div style="padding-bottom: 18px;">Email<span style="color: red;"> *</span><br/>
+                <input type="text" id="data_5" name="data_5" style="width : 450px;" class="form-control"/>
+              </div>
+              <div style="padding-bottom: 18px;">Número telefónico<span style="color: red;"> *</span><br/>
+                <input type="text" id="data_6" name="data_6" style="width : 450px;" class="form-control"/>
+              </div>
+              <div style="padding-bottom: 18px;font-size : 18px;">Position</div>
+              <div style="padding-bottom: 18px;">Posición a la que se está aplicando<span style="color: red;"> *</span><br/>
+                <input type="text" id="data_9" name="data_9" style="width : 450px;" class="form-control"/>
+              </div>
+              <div style="padding-bottom: 18px;">Adjunta tu hoja de vida<br/>
+                <input id="data_10" name="data_10" style="width : 450px;" type="file" class="form-control"/>
+              </div>
+              <div style="padding-bottom: 18px;">Enlaces de interés (Linked-in, portfolio personal, etc.)<br/>
+                <input type="text" id="data_11" name="data_11" style="width : 450px;" class="form-control"/>
+              </div>
+              <div style="padding-bottom: 18px;">Expectativa salarial<br/>
+                <input type="text" id="data_12" name="data_12" style="width : 450px;" class="form-control"/>
+              </div>
+              <div style="padding-bottom: 18px;">Cuándo puedes comenzar?<br/>
+                <input type="text" id="data_13" name="data_13" style="width : 450px;" class="form-control"/>
+              </div>
+              <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.4.0/pikaday.min.js" type="text/javascript"></script>
+                <link href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.4.0/css/pikaday.min.css" rel="stylesheet" type="text/css" />
+              <script type="text/javascript">new Pikaday({ field: document.getElementById('data_13') });</script>
+              <div style="padding-bottom: 18px;">Estás dispuesto/a a residir fuera de tu ciudad?<br/>
+                <span><input type="radio" id="data_14_0" name="data_14" value="Yes"/> Si</span><br/>
+                <span><input type="radio" id="data_14_1" name="data_14" value="No"/> No</span><br/>
+                <span><input type="radio" id="data_14_2" name="data_14" value="Not sure"/> No estoy seguro/a</span><br/>
+              </div>
+              <div style="padding-bottom: 18px;"> Cuál es la última empresa para la que trabajaste?<br/>
+                <input type="text" id="data_15" name="data_15" style="width : 450px;" class="form-control"/>
+              </div>
+              <div style="padding-bottom: 18px;">Déjanos una breve descripción de tu persona<br/>
+                <textarea id="data_16" false name="data_16" style="width : 450px;" rows="6" class="form-control"></textarea>
+              </div>
+              <div style="padding-bottom: 18px;"><input name="skip_Submit" value="Enviar" class="btn_1 green medium add_bottom_30" type="submit"/></div>
+              <!-- <div>
+              <script src="https://www.100forms.com/js/FORMKEY:NFXY8DRGLNDK" type="text/javascript"></script>
+              </div> -->
 
+              </form>
 
-               <hr>
-
-              <div id="message-contact"></div>
-                <form method="post" action="assets/contact.php" id="contactform">
-                    <div class="row">
-                        <div class="col-md-6 col-sm-6">
-                            <div class="form-group">
-                                <label>Nombre</label>
-                                <input type="text" class="form-control" id="name_contact" name="name_contact" >
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-sm-6">
-                            <div class="form-group">
-                                <label>Apellido</label>
-                                <input type="text" class="form-control" id="lastname_contact" name="lastname_contact">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6 col-sm-6">
-                            <div class="form-group">
-                                <label>Email</label>
-                                <input type="email" id="email_contact" name="email_contact" class="form-control" >
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-sm-6">
-                            <div class="form-group">
-                                <label>Teléfono</label>
-                                <input type="text" id="phone_contact" name="phone_contact" class="form-control">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="form-group">
-                                <label>Déjanos un mensaje</label>
-                                <textarea rows="5" id="message_contact" name="message_contact" class="form-control" style="height:100px;"></textarea>
-                            </div>
-                        </div>
-                    </div>
-                </form>
+              <script type="text/javascript">
+                function validateForm() {
+                  if (isEmpty(document.getElementById('data_3').value.trim())) {
+                    alert('Ingrese al menos un nombre.');
+                    return false;
+                  }
+                if (isEmpty(document.getElementById('data_4').value.trim())) {
+                  alert('Ingrese al menos un apellido.');
+                  return false;
+                }
+                if (isEmpty(document.getElementById('data_5').value.trim())) {
+                  alert('Email es un dato requerido.');
+                  return false;
+                }
+                if (!validateEmail(document.getElementById('data_5').value.trim())) {
+                  alert('Email debe contener una dirección válida.');
+                  return false;
+                }
+                if (isEmpty(document.getElementById('data_6').value.trim())) {
+                  alert('Es necesario especificar un número telefónico.');
+                  return false;
+                }
+                if (isEmpty(document.getElementById('data_9').value.trim())) {
+                  alert('Es necesario especificar el puesto al que se aplica.');
+                  return false;
+                }
+                return true;
+                }
+                function isEmpty(str) { return (str.length === 0 || !str.trim()); }
+                function validateEmail(email) {
+                  var re = /^([\w-]+(?:\.[\w-]+)*)@((?:[\w-]+\.)*\w[\w-]{0,66})\.([a-z]{2,15}(?:\.[a-z]{2})?)$/i;
+                  return isEmpty(email) || re.test(email);
+                }
+              </script>
            </div><!-- End col-md-9 -->
 
            <div class="col-md-3">
