--- a/home.html
+++ b/home.html
@@ -109,12 +109,14 @@
 							<li class="submenu">
 								<a href="quotation.html" class="show-submenu">Cotizador</i></a>
 							</li>
-							<li><a href="about.html">Nuestra empresa</a></li>
-                            <li class="submenu">
+							<li class="submenu">
+								<a href="javascript:void(0);" class="show-submenu">Nuestra empresa <i class="icon-down-open-mini"></i></a>
+								<ul>
+									<li><a href="about.html">Acerca de</a></li>
+									<li><a href="wwu.html">Trabaja con nosotros</a></li>
+								</ul>
 							</li>
 							<li><a href="contacts.html">Contáctanos</a></li>
-						</li>
-						<li><a href="wwu.html">Trabaja con nosotros</a></li>
 						</ul>
 					</div><!-- End main-menu -->
 				</nav>
@@ -241,19 +243,19 @@
 							<legend>Instalación</legend>
 							<h3>En donde deseas instalar una alarma?</h3>
 							<div class="form-group">
-								<label><input type="radio" value="Apartment" id="apartment" name="location" class="icheck">Apartmento</label>
+								<label><input type="radio" value="Apartment" id="apartmento" name="location" class="icheck">Apartmento</label>
 							</div>
 							<div class="form-group">
-								<label><input type="radio" value="Villa" id="villa" name="location" class="icheck">Residencia</label>
+								<label><input type="radio" value="Villa" id="Residencia" name="location" class="icheck">Residencia</label>
 							</div>
 							<div class="form-group">
-								<label><input type="radio" value="Office" id="office" name="location" class="icheck">Oficina</label>
+								<label><input type="radio" value="Office" id="Oficina" name="location" class="icheck">Oficina</label>
 							</div>
 							<div class="form-group">
-								<label><input type="radio" value="Shop" id="shop" name="location" class="icheck">Tienda</label>
+								<label><input type="radio" value="Shop" id="Tienda" name="location" class="icheck">Tienda</label>
 							</div>
 							<div class="form-group">
-								<label><input type="radio" value="Warehouse" id="warehouse" name="location" class="icheck">Almacén</label>
+								<label><input type="radio" value="Warehouse" id="Almacén" name="location" class="icheck">Almacén</label>
 							</div>
 						</fieldset><!-- End Step one -->
 
