--- a/quotation.html
+++ b/quotation.html
@@ -100,12 +100,14 @@
   							<li class="submenu">
   								<a href="quotation.html" class="show-submenu">Cotizador</i></a>
   							</li>
-  							<li><a href="about.html">Nuestra empresa</a></li>
-                              <li class="submenu">
-  							</li>
+                <li class="submenu">
+                  <a href="javascript:void(0);" class="show-submenu">Nuestra empresa <i class="icon-down-open-mini"></i></a>
+                  <ul>
+                    <li><a href="about.html">Acerca de</a></li>
+                    <li><a href="wwu.html">Trabaja con nosotros</a></li>
+                  </ul>
+                </li>
   							<li><a href="contacts.html">Contáctanos</a></li>
-              </li>
-              <li><a href="wwu.html">Trabaja con nosotros</a></li>
 						</ul>
 					</div><!-- End main-menu -->
 				</nav>
