--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="ALFAPAZ Cia. Ltda - Seguridad Privada">
 	<meta name="author" content="Cubesquad.org">
-	<title>Alfapaz - Seguridad Privada</title>
+	<title>Alfapaz | Seguridad Privada</title>
 
 	<!-- Favicons  ACTUALIZAR FAVICONS 196X127-->
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
