--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="ALFAPAZ Cia. Ltda - Seguridad Privada">
 	<meta name="author" content="Cubesquad.org">
-	<title>Alfapaz - Seguridad Privada</title>
+	<title>Alfapaz | Seguridad Privada</title>
 
 	<!-- Favicons  ACTUALIZAR FAVICONS 196X127-->
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
@@ -130,24 +130,24 @@
 				<!-- first slide -->
 				<div class="ls-slide" data-ls="slidedelay: 5000; transition2d:5;">
 					<img src="img/slides/slide_1.jpg" class="ls-bg" alt="Slide background">
-					<h3 class="ls-l" style="top: 45%; left: 60px; font-size: 60px; white-space:nowrap; color:#fff; text-transform:uppercase; font-weight:900;" data-ls="offsetxin:0;durationin:2000;delayin:1000;easingin:easeOutElastic;rotatexin:90;transformoriginin:50% bottom 0;offsetxout:0;rotatexout:90;transformoriginout:50% bottom 0;">La mejor inversión, tu seguridad.</h3>
-					<p class="ls-l" style="top:53%; left:60px; color:#fff; font-size:28px; white-space:nowrap;" data-ls="durationin:2000;delayin:1000;easingin:easeOutElastic;">"Brindamos un servicio confiable y accesible"</p>
+					<h3 class="ls-l" style="text-shadow: 1px 1px 2px black; top: 45%; left: 60px; font-size: 60px; white-space:nowrap; color:#fff; text-transform:uppercase; font-weight:900;" data-ls="offsetxin:0;durationin:2000;delayin:1000;easingin:easeOutElastic;rotatexin:90;transformoriginin:50% bottom 0;offsetxout:0;rotatexout:90;transformoriginout:50% bottom 0;">La mejor inversión, tu seguridad.</h3>
+					<p class="ls-l" style="text-shadow: 1px 1px 2px black; top:53%; left:60px; color:#fff; font-size:28px; white-space:nowrap;" data-ls="durationin:2000;delayin:1000;easingin:easeOutElastic;">"Brindamos un servicio confiable y accesible"</p>
 					<a class="ls-l button_intro " style="top:65%; left:60px;white-space: nowrap;" data-ls="durationin:2000;delayin:1300;easingin:easeOutElastic;" href="#">Cotízalo ahora</a>
 				</div>
 
 				<!-- second slide -->
 				<div class="ls-slide" data-ls="slidedelay:5000; transition2d:5;">
 					<img src="img/slides/slide_3.jpg" class="ls-bg" alt="Slide background">
-					<h3 class="ls-l" style="top:45%; left:50%; font-size: 60px; white-space:nowrap; color:#fff; text-transform:uppercase;font-weight:900;" data-ls="offsetxin:0;durationin:2000;delayin:1000;easingin:easeOutElastic;rotatexin:90;transformoriginin:50% bottom 0;offsetxout:0;rotatexout:90;transformoriginout:50% bottom 0;">Equipo experto y calificado</h3>
-					<p class="ls-l" style="top:53%; left:50%; color:#fff; font-size:28px; white-space:nowrap;" data-ls="durationin:2000;delayin:1000;easingin:easeOutElastic;">"Deja que nuestros profesionales se encarguen"</p>
+					<h3 class="ls-l" style="text-shadow: 1px 1px 2px black; top:45%; left:50%; font-size: 60px; white-space:nowrap; color:#fff; text-transform:uppercase;font-weight:900;" data-ls="offsetxin:0;durationin:2000;delayin:1000;easingin:easeOutElastic;rotatexin:90;transformoriginin:50% bottom 0;offsetxout:0;rotatexout:90;transformoriginout:50% bottom 0;">Equipo experto y calificado</h3>
+					<p class="ls-l" style="text-shadow: 1px 1px 2px black; top:53%; left:50%; color:#fff; font-size:28px; white-space:nowrap;" data-ls="durationin:2000;delayin:1000;easingin:easeOutElastic;">"Deja que nuestros profesionales se encarguen"</p>
 					<a class="ls-l button_intro " style="top:65%; left:50%;white-space: nowrap;" data-ls="durationin:2000;delayin:1300;easingin:easeOutElastic;" href="#">Conócenos</a>
 				</div>
 
 				<!-- third slide -->
 				<div class="ls-slide" data-ls="slidedelay: 5000; transition2d:5;">
 					<img src="img/slides/slide_2.jpg" class="ls-bg" alt="Slide background">
-					<h3 class="ls-l" style="top:45%; left:50%; text-align:right; font-size: 60px; white-space:nowrap; color:#fff; text-transform:uppercase;font-weight:900;" data-ls="offsetxin:0;durationin:2000;delayin:1000;easingin:easeOutElastic;rotatexin:90;transformoriginin:50% bottom 0;offsetxout:0;rotatexout:90;transformoriginout:50% bottom 0;">Monitoreo 24/7</h3>
-					<p class="ls-l" style="top:53%; left:50%; color:#fff; font-size:28px; white-space:nowrap;" data-ls="durationin:2000;delayin:1000;easingin:easeOutElastic;">"Supervisa tu hogar o empresa en pocos clicks"</p>
+					<h3 class="ls-l" style="text-shadow: 1px 1px 2px black; top:45%; left:50%; text-align:right; font-size: 60px; white-space:nowrap; color:#fff; text-transform:uppercase;font-weight:900;" data-ls="offsetxin:0;durationin:2000;delayin:1000;easingin:easeOutElastic;rotatexin:90;transformoriginin:50% bottom 0;offsetxout:0;rotatexout:90;transformoriginout:50% bottom 0;">Monitoreo 24/7</h3>
+					<p class="ls-l" style="text-shadow: 1px 1px 2px black; top:53%; left:50%; color:#fff; font-size:28px; white-space:nowrap;" data-ls="durationin:2000;delayin:1000;easingin:easeOutElastic;">"Supervisa tu hogar o empresa en pocos clicks"</p>
 					<a class="ls-l button_intro " style="top:65%; left:50%;white-space: nowrap;" data-ls="durationin:2000;delayin:1300;easingin:easeOutElastic;" href="#">Cotízalo ahora</a>
 				</div>
 
@@ -243,19 +243,19 @@
 							<legend>Instalación</legend>
 							<h3>En donde deseas instalar una alarma?</h3>
 							<div class="form-group">
-								<label><input type="radio" value="Apartment" id="apartment" name="location" class="icheck">Apartmento</label>
+								<label><input type="radio" value="Apartment" id="apartmento" name="location" class="icheck">Apartmento</label>
 							</div>
 							<div class="form-group">
-								<label><input type="radio" value="Villa" id="villa" name="location" class="icheck">Residencia</label>
+								<label><input type="radio" value="Villa" id="Residencia" name="location" class="icheck">Residencia</label>
 							</div>
 							<div class="form-group">
-								<label><input type="radio" value="Office" id="office" name="location" class="icheck">Oficina</label>
+								<label><input type="radio" value="Office" id="Oficina" name="location" class="icheck">Oficina</label>
 							</div>
 							<div class="form-group">
-								<label><input type="radio" value="Shop" id="shop" name="location" class="icheck">Tienda</label>
+								<label><input type="radio" value="Shop" id="Tienda" name="location" class="icheck">Tienda</label>
 							</div>
 							<div class="form-group">
-								<label><input type="radio" value="Warehouse" id="warehouse" name="location" class="icheck">Almacén</label>
+								<label><input type="radio" value="Warehouse" id="Almacén" name="location" class="icheck">Almacén</label>
 							</div>
 						</fieldset><!-- End Step one -->
 
@@ -434,7 +434,7 @@
 				<div class="col-md-4 col-sm-12" id="contact_bg">
 					<h3>Contactos</h3>
 					<ul id="contact_details_footer">
-						<li id="address_footer">Remigio Crespo y Psje. Romeo Castillo <br>Ambato - Ecuador</li>
+						<li id="address_footer">Republica del salvador - 101<br>Ambato - Ecuador</li>
 						<li id="phone_footer"><a href="tel://+59332586728">+593 325 867 28</a> / <a href="tel://004542344599">+593 983272604</a></li>
 						<li id="email_footer"><a href="#0">info@alfapaz.com</a></li>
 					</ul>
@@ -444,6 +444,8 @@
 				<ul>
 					<li><a href="#0"><i class="icon-facebook"></i></a></li>
 					<li><a href="#0"><i class="icon-twitter"></i></a></li>
+					<li><a href="#0"><i class="icon-google"></i></a></li>
+					<li><a href="#0"><i class="icon-vimeo"></i></a></li>
 				</ul>
 			</div>
 		</div><!-- End container -->
