--- a/home.html
+++ b/home.html
@@ -74,7 +74,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-3 hidden-xs">
-						<span id="tag_line">"Expertos  en seguridad privada"</span>
+						<span id="tag_line">"Nuestro compromiso, tu seguridad"</span>
 					</div>
 					<div class="col-sm-9">
 						<ul id="top_links">
@@ -96,7 +96,7 @@
 					<a class="cmn-toggle-switch cmn-toggle-switch__htx open_close" href="javascript:void(0);"><span></span></a>
 					<div class="main-menu">
 						<div id="header_menu">
-							<img src="img/logo.png" width="190" height="44" alt="Home Alarms" data-retina="true">
+							<img src="img/logo.png" width="190" height="44" alt="Alfapaz" data-retina="true">
 						</div>
 						<a href="#" class="open_close" id="close_in"><i class="icon_close"></i></a>
 						<ul>
@@ -104,16 +104,16 @@
 								<a href="#" class="show-submenu"><i class="fas fa-home"></i></a>
 							</li>
 							<li class="submenu">
-								<a href="services_layout_2.html" class="show-submenu">Servicios</i></a>
+								<a href="nuestros-servicios.html" class="show-submenu">Servicios</i></a>
 						 </li>
 							<li class="submenu">
-								<a href="quotation.html" class="show-submenu">Cotizador</i></a>
+								<a href="agenda-una-visita.html" class="show-submenu">Agenda una visita</i></a>
 							</li>
 							<li class="submenu">
 								<a href="javascript:void(0);" class="show-submenu">Nuestra empresa <i class="icon-down-open-mini"></i></a>
 								<ul>
-									<li><a href="about.html">Acerca de</a></li>
-									<li><a href="wwu.html">Trabaja con nosotros</a></li>
+									<li><a href="acerca-de.html">Acerca de</a></li>
+									<li><a href="trabaja-con-nosotros.html">Trabaja con nosotros</a></li>
 								</ul>
 							</li>
 							<li><a href="contacts.html">Contáctanos</a></li>
@@ -413,48 +413,45 @@
 		</div><!-- End container -->
 	</main><!-- End main -->
 
-	<footer>
-		<div class="container">
-			<div class="row ">
-				<div class="col-md-4 col-sm-8">
-					<img src="img/logo-footer.png" width="190" height="44" alt="Home Alarms" data-retina="true" id="logo_footer">
-					<p>Id pri consul aeterno petentium. Vivendo abhorreant et vim, et quot persecuti mel. Libris hendrerit ex sea. Duo legere evertitur an, pri hinc doctus definitiones an, vix id dicam putent. Ius ornatus instructior in.</p>
-				</div>
-				<div class="col-md-3 col-md-offset-1 col-sm-4">
-					<h3>Descubre</h3>
-					<ul>
-						<li><a href="#0">Acerca de</a></li>
-						<li><a href="#0">FAQ</a></li>
-						<li><a href="#0">Cotizador</a></li>
-						<li><a href="#0">Contactanos</a></li>
-						<li><a href="#0">Servicios</a></li>
-						<li><a href="#0">Galería</a></li>
-					</ul>
-				</div>
-				<div class="col-md-4 col-sm-12" id="contact_bg">
-					<h3>Contactos</h3>
-					<ul id="contact_details_footer">
-						<li id="address_footer">Republica del salvador - 101<br>Ambato - Ecuador</li>
-						<li id="phone_footer"><a href="tel://+59332586728">+593 325 867 28</a> / <a href="tel://004542344599">+593 983272604</a></li>
-						<li id="email_footer"><a href="#0">info@alfapaz.com</a></li>
-					</ul>
-				</div>
-			</div><!-- End row -->
-			<div id="social_footer">
-				<ul>
-					<li><a href="#0"><i class="icon-facebook"></i></a></li>
-					<li><a href="#0"><i class="icon-twitter"></i></a></li>
-					<li><a href="#0"><i class="icon-google"></i></a></li>
-					<li><a href="#0"><i class="icon-vimeo"></i></a></li>
-				</ul>
-			</div>
-		</div><!-- End container -->
-		<div id="copy">
-			<div class="container">
-				Alfapaz© 2019.
-			</div>
-		</div><!-- End copy -->
-	</footer><!-- End footer -->
+<footer>
+    <div class="container">
+      <div class="row ">
+        <div class="col-md-4 col-sm-8">
+          <img src="img/logo-footer.png" width="190" height="44" alt="Alfapaz logo" data-retina="true" id="logo_footer">
+          <p>Somos una Empresa diferente en el sector de la seguridad, brindando servicios integrales de calidad, apoyados de la tecnología y de un equipo de elite debidamente preparado, motivado y con vocación de servicio para proteger lo más preciado para ti, respetando las leyes y obligaciones patronales.</p>
+        </div>
+        <div class="col-md-3 col-md-offset-1 col-sm-4">
+          <h3>Descubre</h3>
+          <ul>
+            <li><a href="acerca-de.html">Acerca de</a></li>
+            <li><a href="agenda-una-visita.html">Agenda una visita</a></li>
+            <li><a href="contacto.html">Contáctanos</a></li>
+            <li><a href="servicios.html">Servicios</a></li>
+            <li><a href="trabaja-con-nosotros.html">Trabaja con nosotros</a></li>
+          </ul>
+        </div>
+        <div class="col-md-4 col-sm-12" id="contact_bg">
+          <h3>Contactos</h3>
+          <ul id="contact_details_footer">
+            <li id="address_footer">Remigio Crespo y Psje. Romeo Castillo <br>Ambato - Ecuador</li>
+            <li id="phone_footer"><a href="tel://+59332586728">32586728</a> / <a href="tel://+59332586728"> 32586728</a></li>
+            <li id="email_footer"><a href="#0">info@alfapaz.com</a></li>
+          </ul>
+        </div>
+      </div><!-- End row -->
+      <div id="social_footer">
+        <ul>
+          <li><a href="#0"><i class="icon-facebook"></i></a></li>
+          <li><a href="#0"><i class="icon-twitter"></i></a></li>
+        </ul>
+      </div>
+    </div><!-- End container -->
+    <div id="copy">
+      <div class="container">
+        Alfapaz© 2020.
+      </div>
+    </div><!-- End copy -->
+  </footer><!-- End footer -->
 
 	<div id="toTop"></div><!-- Back to top button -->
 
